--- a/assets/css/main/section.css
+++ b/assets/css/main/section.css
@@ -13,6 +13,7 @@ section{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 section #box-library{
      display: flex;
